syntax = "proto3";

service MasterService {
    rpc RegisterWorker(RegisterWorkerRequest) returns (RegisterWorkerReply) {}
    rpc RegisterJob(RegisterJobRequest) returns (RegisterJobReply) {}
    rpc CheckConnection(CheckConnectionRequest) returns (CheckConnectionReply) {}
}

message RegisterWorkerRequest {
    int32 worker_port = 2;
}

message RegisterWorkerReply {
    bool ok = 1;
}

message RegisterJobRequest {
    string path = 1;
    string mapper = 2;
    string reducer = 3;
}

message RegisterJobReply {
    bool ok = 1;
}

message CheckConnectionRequest {
    string message = 1;
}

message CheckConnectionReply {
    bool ok = 1;
}
